tests/ui/typech/generic_type_method_static_call_incorrect_type.lm
struct A<T> {}

impl<T> A<T> {
    fn bar(val:  T) { }
}

fn bar() {
    A<Boolean>::bar(0);
}
